# money-flow

./: .editorconfig  .pre-commit-config.yaml  README.md  docker-compose.yaml
.github/: dependabot.yml
.github/workflows/: pre-commit.yml  tests.yml
docs/: architecture.md
orchestrator/: Dockerfile  pyproject.toml
orchestrator/app/: main.py
orchestrator/app/core/: settings.py
orchestrator/app/workflows/: __init__.py  context.py  product.py  typing.py
orchestrator/app/workflows/nodes/: __init__.py
orchestrator/app/workflows/nodes/condition/: enums.py  node.py  typing.py
orchestrator/app/workflows/nodes/task/: node.py  typing.py
orchestrator/app/workflows/tasks/: __init__.py  abort_flow.py  generate_invoice.py  generate_royalty.py
payment-composer-api/: Dockerfile  alembic.ini  pyproject.toml
payment-composer-api/app/: main.py
payment-composer-api/app/alembic/: env.py
payment-composer-api/app/alembic/versions/: c4bbc071927d_.py
payment-composer-api/app/core/: database.py  dependencies.py  enums.py  models.py  settings.py
payment-composer-api/app/payment-rule/: api.py  schemas.py
payment-composer-api/app/payment_rule/: api.py  enums.py  schemas.py
payment-composer-api/app/tests/: conftest.py  database.py  factories.py  test_api_create_payment_rules.py  test_api_get_payment_rules.py
payment-router/: Dockerfile  pyproject.toml
payment-router/app/: main.py
payment-router/app/core/: broker.py  settings.py
payment-router/app/webhook/: api.py  enums.py  models.py  services.py
