[tool.poetry]
name = "orchestrator"
version = "0.1.0"
description = "Moneyflow Orchestrator"
authors = ["Willian Morais <williandmorais@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pika = "^1.3.2"
pydantic-settings = "^2.2.1"
pydantic = "^2.5.3"
orjson = "^3.9.10"
prefect = "^2.14.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
fix = true
line-length = 120

[tool.ruff.isort]
known-first-party = ["app"]
