[tool.poetry]
name = "moneyflow-payment-router"
version = "0.1.0"
description = "MoneyFlow Payment Router"
authors = ["Willian Morais <williandmorais@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.24.0.post1"
fastapi = "^0.105.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
