[tool.poetry]
name = "moneyflow-payment-router"
version = "0.1.0"
description = "MoneyFlow Payment Router"
authors = ["Willian Morais <williandmorais@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.24.0.post1"
fastapi = "^0.105.0"
pika = "^1.3.2"
pydantic-settings = "^2.1.0"

[tool.poetry.group.dev.dependencies]
faker = "^21.0.0"
httpx = "^0.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
combine_as_imports = true
line_length = 120
